name:                haskellbook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robertjlooby/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Looby
maintainer:          robertjlooby@gmail.com
copyright:           Robert Looby
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskellbook
  main-is:             site.hs
  hs-source-dirs:      .
                     , chapters
  other-modules:       Chapter06
                     , Chapter07
                     , Chapter09
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , hspec
test-suite spec
  main-is:             spec.hs
  hs-source-dirs:      .
                     , chapters
  other-modules:       Chapter06
                     , Chapter07
                     , Chapter09
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , hspec
