name:                haskellbook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robertjlooby/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Looby
maintainer:          robertjlooby@gmail.com
copyright:           Robert Looby
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskellbook
  main-is:             site.hs
  hs-source-dirs:      .
                     , chapters
  other-modules:       Chapter06
                     , Chapter07
                     , Chapter09
                     , Chapter10
                     , Chapter11
                     , Chapter12
                     , Chapter13
                     , Chapter14
                     , Chapter15
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hakyll
                     , hspec
                     , QuickCheck
                     , random
                     , time

executable hangman
  main-is:             Hangman.hs
  hs-source-dirs:      mains
                     , chapters
  other-modules:       Chapter13
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , random

executable morse
  main-is:             Morse.hs
  hs-source-dirs:      mains
                     , chapters
  other-modules:       Chapter09
                     , Chapter11
                     , Chapter14
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hspec
                     , QuickCheck

executable palindrome
  main-is:             Palindrome.hs
  hs-source-dirs:      mains
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , hspec

executable person
  main-is:             PersonValidator.hs
  hs-source-dirs:      mains
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , hspec

executable vigenere-cipher
  main-is:             VigenereCipher.hs
  hs-source-dirs:      mains
                     , chapters
  other-modules:       Chapter11
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , hspec

test-suite spec
  main-is:             spec.hs
  hs-source-dirs:      .
                     , chapters
  other-modules:       Chapter06
                     , Chapter07
                     , Chapter09
                     , Chapter10
                     , Chapter11
                     , Chapter12
                     , Chapter13
                     , Chapter14
                     , Chapter15
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hspec
                     , QuickCheck
                     , random
                     , time
